remove text overflowing issue when reducing width of screen

--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -4,6 +4,7 @@
 
 #article-wrapper .article-card {
   border-style: outset;
+
   border-width: 7px;
   border-radius: 10px;
   padding: 20px;
@@ -19,7 +20,6 @@
 
 #article-wrapper .item-details {
   width: 70vw;
-  height: 200px;
 }
 
 #article-wrapper .button-container {
